package org.x96.sys.sc.ir;

public sealed interface Flow extends ScIr permits Id, Life, Bundle {}
